Ejemplo probar el comando git diff para ver la diferencia entre una modificación y el staging

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Titulo del Blogpost</h1>
-<p>Contenido e información.</p>    
+<p>Contenido e información.</p>  
+<p>Ver diferencia con git diff</p>    
 </body>
 </html>
