Inicio del proyecto real

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
 <h1>Titulo del Blogpost</h1>
 <p>Contenido e información.</p>  
-<p>Ver diferencia con git diff</p>    
+<p>Ver diferencia con git diff</p>   
+<p>Iniciando el proyecto real</p>    
 </body>
 </html>
