Commit al master del blogpost en su versión más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-<h1>Titulo del Blogpost</h1>
-<p>Contenido e información.</p>  
-<p>Ver diferencia con git diff</p>   
-<p>Iniciando el proyecto real</p>    
+    <div id="container">
+        <div id="post">
+            <h1>Titulo del Blogpost</h1>
+            <p>Contenido e información.</p>
+            <p>Ver diferencia con git diff</p>
+            <p>Iniciando el proyecto real</p>  
+        </div>
+    </div> 
 </body>
 </html>
