--- a/blogpost.html
+++ b/blogpost.html
@@ -10,11 +10,12 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Titulo del Blogpost</h1>
-            <p>Contenido e información.</p>
+            <p>Contenido e información, parrafo de inicio para mostrar las cosas que se pueden lograr.</p>
             <p>Ver diferencia con git diff</p>
             <p>Iniciando el proyecto real</p>  
         </div>
