--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,11 @@
             <p>Contenido e información.</p>
             <p>Ver diferencia con git diff</p>
             <p>Iniciando el proyecto real</p>  
+            <p>Los blogs son la mejor forma de compartir informaciòn y tus ideas.
+                Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
+                Pero estadísticamente no lo eres... por ahora.
+
+            </p>  
         </div>
     </div> 
 </body>
