Agregué suscripción, cambie la cabecera maestr y puse todo en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
             <h1>Titulo del Blogpost</h1>
@@ -22,7 +22,8 @@
                 Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estadísticamente no lo eres... por ahora.
 
-            </p>  
+            </p>
+            <p>Subscribete y dale like.</p>  
         </div>
     </div> 
 </body>
