--- a/blogpost.html
+++ b/blogpost.html
@@ -22,7 +22,8 @@
                 Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estadísticamente no lo eres... por ahora.
 
-            </p>  
+            </p>
+            <p>test checkout Cabecera</p>  
         </div>
     </div> 
 </body>
