--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
             </p>
             <p>Subscribete y dale like. </p> 
             <p>Test commit 29-11-2021 15:17</p> 
-            <p>Comentarios:</p>  
+            <p>Comentarios: Prueba de commit.</p>  
         </div>
     </div> 
 </body>
