--- a/blogpost.html
+++ b/blogpost.html
@@ -23,8 +23,9 @@
                 Pero estadísticamente no lo eres... por ahora.
 
             </p>
-            <p>Subscribete y dale like. </p> 
             <p>Test commit 29-11-2021 15:17</p> 
+            <p>Comentarios: Prueba de commit.</p>  
+            <p>Test commit 24-04-2022 20:45</p> 
             <p>Comentarios: Prueba de commit.</p>  
         </div>
     </div> 
