--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,9 @@
             <p>Test commit 29-11-2021 15:17</p> 
             <p>Comentarios: Prueba de commit.</p>  
             <p>Test commit 24-04-2022 20:45</p> 
-            <p>Comentarios: Prueba de commit.</p>  
+            <p>Comentarios: Prueba de commit.</p>
+	    <p>Inicio 2022</p>
+  
         </div>
     </div> 
 </body>
