--- a/blogpost.html
+++ b/blogpost.html
@@ -27,7 +27,7 @@
             <p>Comentarios: Prueba de commit.</p>  
             <p>Test commit 24-04-2022 20:45</p> 
             <p>Comentarios: Prueba de commit.</p>
-	    <p>Inicio 2022</p>
+	    <p>Inicio 2022 User Rocalinux</p>
   
         </div>
     </div> 
