--- a/blogpost.html
+++ b/blogpost.html
@@ -27,6 +27,9 @@
             <p>Test commit 29-11-2021 15:17</p> 
             <p>Comentarios: Prueba de commit.</p>  
         </div>
+        <div id="footer">
+            Mensaje Footer Derechos y Copyright &lt;3
+        </div>
     </div> 
 </body>
 </html>
