--- a/blogpost.html
+++ b/blogpost.html
@@ -15,11 +15,11 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Titulo del Blogpost</h1>
-            <p>Contenido e información, parrafo de inicio para mostrar las cosas que se pueden lograr.</p>
+            <h1>Título del Blogpost</h1>
+            <p>Contenido e información, párrafo de inicio para mostrar las cosas que se pueden lograr.</p>
             <p>Ver diferencia con git diff</p>
             <p>Iniciando el proyecto real</p>  
-            <p>Los blogs son la mejor forma de compartir informaciòn y tus ideas.
+            <p>Los blogs son la mejor forma de compartir información y tus ideas.
                 Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estadísticamente no lo eres... por ahora.         </p>
             <p>Test commit 29-11-2021 15:17</p> 
