--- a/blogpost.html
+++ b/blogpost.html
@@ -15,13 +15,15 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>T&iacute;tulo del Blogpost</h1>
+            <h1>UNIVERSO</h1>
             <p>Contenido e informaci&oacute;n, p&aacute;rrafo de inicio para mostrar las cosas que se pueden lograr.</p>
-            <p>Ver diferencia con git diff</p>
             <p>Iniciando el proyecto real</p>  
             <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                 Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
-                Pero estad&iacute;sticamente no lo eres... por ahora.         </p>
+                Pero estad&iacute;sticamente no lo eres... por ahora.</p>
+                <p>
+                    <img id="logo" src="imagenes/universo.jpg" width="100%"/>
+                </p>
             <p>Test commit 29-11-2021 15:17</p> 
             <p>Comentarios: Prueba de commit.</p>  
             <p>Test commit 24-04-2022 20:45</p> 
