Inicio Curso Básico HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,6 +29,13 @@
             <p>Test commit 24-04-2022 20:45</p> 
             <p>Comentarios: Prueba de commit.</p>
 	        <p>Inicio 2022 User Rocalinux</p>
+        </div>
+        <div id="navegador">
+
+            <a href="/sitio-3.html">
+                <button>Siguiente</button>
+            </a>
+
         </div>
         <div id="footer">
             Mensaje Footer Derechos y Copyright &lt;3
