--- a/sitio-6.html
+++ b/sitio-6.html
@@ -9,7 +9,7 @@
 <body>
     <p><h1>Anclas o Vínculos</h1></p>
     <p><a href="https://www.google.cl">Google</a></p>
-    <p><a href="https://plustatic.com/1508/conversions/curiosidades-universo-default.jpg">imagen</a></p>
+    <p><a href="https://plustatic.com/1508/conversions/curiosidades-universo-default.jpg">Imagen</a></p>
     <div id="navegador">
         <a href="/sitio-5.html">
             <button>Anterior</button>
