--- a/sitio-4.html
+++ b/sitio-4.html
@@ -30,10 +30,10 @@
         <small>Texto Pequeño</small>
     </p>
     <p>Párrafo 8:
-        <sup>Texto superíndice</sup>
+        Texto<sup>Texto superíndice</sup>
     </p>
     <p>Párrafo 9:
-        <sub>Texto subindice</sub>
+        Texto<sub>Texto subindice</sub>
     </p>
     <p>Párrafo 10:
         <ins>Texto insertado</ins>
