HTML y CSS Fundamentos

--- a/sitio-8.html
+++ b/sitio-8.html
@@ -10,12 +10,11 @@
     <p><h1>Anclas con Imágenes</h1></p>
     <a href="www.google.cl"><img src="/imagenes/universo.jpg" alt="Fotografía universo"></a>
     <div id="navegador">
-          
         <a href="/sitio-7.html">
             <button>Anterior</button>
         </a>
-        <a href="/blogpost.html">
-            <button>Inicio</button>
+        <a href="/sitio-9_tablas.html">
+            <button>Siguiente</button>
         </a> 
     </div>
 </body>
