--- a/sitio-10_forms.html
+++ b/sitio-10_forms.html
@@ -97,7 +97,7 @@
     <br>
     <hr>
     <div id="navegador">          
-        <a href="/sitio-8.html">
+        <a href="/sitio-9_tablas.html">
             <button>Anterior</button>
         </a>
         <a href="/sitio-11_CSS.html">
