--- a/sitio-11_CSS.html
+++ b/sitio-11_CSS.html
@@ -5,19 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS FUNDAMENTOS</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+        h2{
+            color: blueviolet;
+        }
+        body{
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
-    <h1>Lorem, ipsum dolor.</h1>
+    <h1 style="color: blue;">Lorem, ipsum dolor.</h1>
+    <h2 style="color:green;">Lorem ipsum dolor sit amet consectetur.</h2>
+    <h3 style="color:indigo;">Lorem ipsum dolor sit amet consectetur.</h3>
+    <h3 class="subtitulo">Lorem ipsum dolor sit amet consectetur.</h3>
 
-
-
-
-
-
-
-    
+    <div class="caja">
+        <h3 id="encabezado">ENCABEZADO DE SECCIÓN</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat illo doloribus harum, minima mollitia fugit error atque repellendus itaque porro ipsam est consequuntur ullam quod nihil quam hic cupiditate doloremque!</p>
+    </div>
+<br>
+<br>
     <div id="navegador">          
-        <a href="/sitio-8.html">
+        <a href="/sitio-10_forms.html">
             <button>Anterior</button>
         </a>
         <a href="/sitio-11_CSS.html">
